[package]
name = "fide"
version = "0.1.0"
fide = "Fun (ctional) Interactive Development Environment"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
image = { version = "0.24.5" , default-features = false, features = [ "png" ]}
rusttype = { version = "0.9.3" , features = [ "gpu_cache" ] }

