[package]
name = "fide"
version = "0.1.0"
description = "Fun (ctional) Interactive Development Environment"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#vulkano = "0.32.2"
#bytemuck = "1.12.3"
#winit = "0.27.5"
#vulkano-win = "0.32.0"
#vulkano-util = "0.32.0"
#vulkano-shaders = "0.32.0"
#glium = "0.32.1"
# luminance = "0.47.0"
# luminance-front = "0.6.1"
image = { version = "0.24.5" , default-features = false, features = [ "png" ]}

[dependencies.sdl2]
version = "0.35"
# default-features = false
#features = ["ttf","image","gfx","mixer"]
# features = ["ttf","image","gfx","mixer", "raw-window-handle"]
# features = ["ttf","image","gfx","mixer", "raw-window-handle"]

